add colours to keys

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="piano">
-      <p class="logo">Written with Words</p>
+      <p class="logo">Drawn with Words</p>
       <!-- <img class="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo" /> -->
       <div class="keys">
         <div class="key" id="C3" onclick="C3.play()"></div>
@@ -26,8 +26,8 @@
         <div class="key" id="C4" onclick="C4.play()"></div>
         <div class="key black--key" id="D4" onclick="D4.play()"></div>
         <div class="key black--key" id="E4" onclick="E4.play()"></div>
-        <div class="key" id="C4" onclick="C4.play()"></div>
-        <div class="key black--key" id="F4" onclick="F4.play()"></div>
+        <div class="key" id="F4" onclick="F4.play()"></div>
+        <div class="key black--key" id="G4" onclick="G4.play()"></div>
         <div class="key black--key" id="A4" onclick="A4.play()"></div>
         <div class="key black--key" id="B4" onclick="B4.play()"></div>
 
